--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.0.1",
     "@prisma/client": "^4.5.0",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
