--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.8",
     "framer-motion": "^7.6.3",
     "next": "13.0.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.8",
+    "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "prisma": "^4.5.0",
