--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "framer-motion": "^7.6.3",
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^13.0.1",
     "next": "13.0.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
@@ -23,6 +25,8 @@
     "sharp": "^0.31.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.13",
