--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "@types/formidable": "^2.0.5",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.11.8",
     "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.13",
+    "formidable": "^2.0.1",
     "postcss": "^8.4.18",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.1",
