--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "sharp": "^0.31.1"
   },
   "devDependencies": {
