--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "next": "13.0.1",
+    "next-auth": "^4.16.4",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
