--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.5.0",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "dotenv": "^16.0.3",
     "framer-motion": "^7.6.3",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
