--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dstart": "cd discord && node build/index.js",
+    "drestart": "cd discord && tsc --build && node ./build/index.js",
+    "setup": "prisma generate && cd discord && tsc --build"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.0.1",
+    "@types/node": "^18.7.14",
+    "@discordjs/rest": "^1.1.0",
+    "discord.js": "14.3.0",
+    "@vercel/og": "^0.0.19",
     "@prisma/client": "^4.6.1",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
